--- a/package.json
+++ b/package.json
@@ -1,59 +1,38 @@
 {
-
-  "name": "isbetween",
-
+  "name": "isbetweennumbers",
   "version": "1.0.0",
-
-  "description": "A simple package to check if a number is between 5 and 7 ",
-
+  "description": "A simple package to check if a number is between",
   "main": "dist/index.js",
-
   "types": "dist/index.d.ts",
-
   "scripts": {
-
     "build": "tsc",
-
     "test": "jest",
-
     "prepare": "npm run build"
-
   },
-
   "keywords": [
-
     "typescript",
-
     "number",
-
     "comparison",
-
     "utility"
-
   ],
-
   "author": "Erwin Jobse",
-
   "license": "MIT",
-
   "devDependencies": {
-
     "@types/jest": "^29.5.14",
-
     "@types/node": "^22.10.1",
-
     "jest": "^29.7.0",
-
     "ts-jest": "^29.2.5",
-
     "typescript": "^5.7.2"
-
   },
-
   "files": [
-
     "dist"
-
-  ]
-
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ErwinJobse/isbetween.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ErwinJobse/isbetween/issues"
+  },
+  "homepage": "https://github.com/ErwinJobse/isbetween#readme"
 }
